...
                    ),
                  ),
                ),
              )),
          const SizedBox(height: 20),
          Button(
            text: 'Continuar',
            onPressed: selectedOption != null ? onContinue : null,
            variant: selectedOption == null
                ? ButtonVariant.ghost
                : ButtonVariant.normal,
            disabled: selectedOption == null ? true : false,
          ),
...
