...
                  const TextSpan(text: ' do MoneyFlow.'),
                ],
              ),
            ),
            const SizedBox(height: 16),
            Button(
              text: 'Concordar e Continuar',
              onPressed: () => onContinue(),
              variant: ButtonVariant.normal,
            ),
          ],
        ),
      ),
...
